--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(utils.cpp AudioFile/AudioFile.h)
+add_executable(utils utils.cpp AudioFile/AudioFile.h)
