--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  # not necessary, but encouraged
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 cmake_minimum_required(VERSION 3.13)
-set(SOURCE_FILES Output.h Output.cpp)
+set(SOURCE_FILES Preprocessing.h Preprocessing.cpp)
 add_executable(ex_1 ${SOURCE_FILES})
