--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1.3)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  # not necessary, but encouraged
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 cmake_minimum_required(VERSION 3.13)
-set(SOURCE_FILES Preprocessing.h Preprocessing.cpp)
+set(SOURCE_FILES run_file.cpp FourierTransform.hpp FourierTransform.cpp SignalProcesser.hpp SignalProcesser.cpp)
 add_executable(ex_1 ${SOURCE_FILES})
