--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ cmake_install.cmake
 *googletest-build
 *googletest-download
 *googletest-src
+noise_removed_signal.dat
+intensity_histogram.dat
+plots
+signal-processing.cbp
