cleaned up repository and readjusted cmakelists

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AudioFile"]
 	path = AudioFile
 	url = https://github.com/adamstark/AudioFile.git
+[submodule "googletest"]
+	path = googletest
+	url = https://github.com/google/googletest.git
