--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,41 +4,13 @@ project(signal-processing VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  # not necessary, but encouraged
 set(CMAKE_CXX_STANDARD 17)
 
-# https://cmake.org/cmake/help/latest/guide/tutorial/index.html
-# https://www.jetbrains.com/help/clion/quick-cmake-tutorial.html
+add_subdirectory(googletest)
 
-# Download and unpack googletest at configure time
-configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-        RESULT_VARIABLE result
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-        RESULT_VARIABLE result
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-    message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
+add_library(signal_processing src/FourierTransform.hpp src/FourierTransform.cpp src/TimeSignalProcessor.hpp
+            src/TimeSignalProcessor.cpp src/BaseSignalProcessor.hpp src/BaseSignalProcessor.cpp)
 
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+add_executable(run_signal_processor run_file.cpp)
+target_link_libraries(run_signal_processor signal_processing)
 
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-        EXCLUDE_FROM_ALL)
-
-
-# Now simply link against gtest or gtest_main as needed. Eg
-add_executable(tests tests/tests.cpp)
-target_link_libraries(tests gtest_main)
-add_test(NAME example_test COMMAND tests)
-
-# main executable
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-set(SOURCE_FILES run_file.cpp FourierTransform.hpp FourierTransform.cpp TimeSignalProcessor.hpp TimeSignalProcessor.cpp BaseSignalProcessor.cpp BaseSignalProcessor.hpp)
-add_executable(ex_1 ${SOURCE_FILES})
+add_executable(test_signal_processor tests/tests.cpp)
+target_link_libraries(test_signal_processor gtest_main gtest pthread signal_processing)
