--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,5 @@ cmake_install.cmake
 *googletest-src
 noise_removed_signal.dat
 intensity_histogram.dat
-plots
 signal-processing.cbp
-*plots
+.ipynb_checkpoints
