--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@ cmake_install.cmake
 *googletest-build
 *googletest-download
 *googletest-src
+*googletest
 noise_removed_signal.dat
 intensity_histogram.dat
 signal-processing.cbp
 .ipynb_checkpoints
+*build
